--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="main_tab_home">首页</string>
     <string name="main_tab_my_account">我的</string>
     <string name="main_tab_invest_finance">产品</string>
+    <string name="user_name_hint">请输入账户</string>
+    <string name="password_hint">请输入密码</string>
+    <string name="login_btn_title">登录</string>
 </resources>
